--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <nav class="navigation_menu">
             <!-- fullscreen menu -->
             <div class='sub-menu'>
-                <div><a href="landing-page.html" class="menu-active animate__delay-1s">Home</a></div>
+                <div><a href="index.html" class="menu-active animate__delay-1s">Home</a></div>
                 <div><a href="about-me.html" class="animate__delay-2s">About</a></div>
                 <div><a href="portfolio-horizontal.html" class="animate__delay-3s">Portfolio</a></div>
                 <div><a href="contact.html" class="animate__delay-5s">Contact</a></div>
@@ -80,7 +80,7 @@
         </nav>
         <div class="home-menu-text">
             <!-- header menu -->
-            <a href="landing-page.html" class="menu-active">Home</a>
+            <a href="index.html" class="menu-active">Home</a>
             <a href="about-me.html">About</a>
             <a href="portfolio-horizontal.html">Portfolio</a>
             <a href="contact.html">Contact</a>
