Fixing landing-page to index pointing for menu

--- a/portfolio-single-project.html
+++ b/portfolio-single-project.html
@@ -44,7 +44,7 @@
         <nav class="navigation_menu">
             <!-- fullscreen menu -->
             <div class='sub-menu'>
-                <div><a href="landing-page.html" class="animate__delay-1s">Home</a></div>
+                <div><a href="index.html" class="animate__delay-1s">Home</a></div>
                 <div><a href="about-me.html" class="animate__delay-2s">About</a></div>
                 <div><a href="portfolio-horizontal.html" class="menu-active animate__delay-3s">Portfolio</a></div>
                 <div><a href="blog.html" class="animate__delay-4s">Blog</a></div>
@@ -81,7 +81,7 @@
         </nav>
         <div class="home-menu-text">
             <!-- header menu -->
-            <a href="landing-page.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="about-me.html">About</a>
             <a href="portfolio-horizontal.html" class="menu-active">Portfolio</a>
             <a href="blog.html">Blog</a>
