--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
         <nav class="navigation_menu">
             <!-- fullscreen menu -->
             <div class='sub-menu'>
-                <div><a href="landing-page.html" class="animate__delay-1s">Home</a></div>
+                <div><a href="index.html" class="animate__delay-1s">Home</a></div>
                 <div><a href="about-me.html" class="animate__delay-2s">About</a></div>
                 <div><a href="portfolio-horizontal.html" class="animate__delay-3s">Portfolio</a></div>
                 <div><a href="contact.html" class="menu-active animate__delay-5s">Contact</a></div>
