--- a/portfolio-single-project -barkpool.html
+++ b/portfolio-single-project -barkpool.html
@@ -49,7 +49,7 @@
         <nav class="navigation_single">
             <!-- fullscreen menu -->
            <!--  <div class='sub-menu'>
-                <div><a href="landing-page.html" class="animate__delay-1s">Home</a></div>
+                <div><a href="index.html" class="animate__delay-1s">Home</a></div>
                 <div><a href="about-me.html" class="animate__delay-2s">About</a></div>
                 <div><a href="portfolio-horizontal.html" class="menu-active animate__delay-3s">Portfolio</a></div>
                 <div><a href="contact.html" class="animate__delay-5s">Contact</a></div>
@@ -60,7 +60,7 @@
         </nav>
         <div class="home-menu-text">
             <!-- header menu -->
-            <a href="landing-page.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="about-me.html">About</a>
             <a href="portfolio-horizontal.html" class="menu-active">Portfolio</a>
             <a href="contact.html">Contact</a>
