updated landingpage to index

--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
         </nav>
         <div class="home-menu-text">
             <!-- header menu -->
-            <a href="landing-page.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="about-me.html">About</a>
             <a href="portfolio-horizontal.html">Portfolio</a>
             <a href="contact.html" class="menu-active">Contact</a>
