Fixing explore links to redirect to portfolio

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                                 <p class="el-anime-2">Browse my selection of conceptual renderings and drawings. I aspire to make every concept a space that fits within its natural environment, adhering to the three pillars of thoughtful design; stability, utility, and beauty. </p>
                                 <div class="el-anime-2">
                                     <div class="button-underline">
-                                        <a href="about-us.html" class="node-hover wrap-button-link">
+                                        <a href="portfolio-horizontal.html" class="node-hover wrap-button-link">
                                             <div class="button-text">
                                                 <span>Explore</span>
                                                 <span class="button-link-hover">Explore</span>
@@ -125,7 +125,7 @@
                                 <p class="el-anime-2">Making things brings me joy. Drawing, painting, carving and blacksmithing are just a few mediums I express myself through. Here you'll find an assortment.</p>
                                 <div class="el-anime-2">
                                     <div class="button-underline">
-                                        <a href="about-us.html" class="node-hover wrap-button-link">
+                                        <a href="portfolio-horizontal.html" class="node-hover wrap-button-link">
                                             <div class="button-text">
                                                 <span>Explore</span>
                                                 <span class="button-link-hover">Explore</span>
@@ -147,7 +147,7 @@
                                 <p class="el-anime-2">Current expressions of my explorations in app development, web design, and graphic design.</p>
                                 <div class="el-anime-2">
                                     <div class="button-underline">
-                                        <a href="about-us.html" class="node-hover wrap-button-link">
+                                        <a href="portfolio-horizontal.html" class="node-hover wrap-button-link">
                                             <div class="button-text">
                                                 <span>Explore</span>
                                                 <span class="button-link-hover">Explore</span>
