Removing lorem ipsum from categories

--- a/portfolio-horizontal.html
+++ b/portfolio-horizontal.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <!-- Mobile Specific Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/ico" href="favicon.png">
+    <link rel="icon" type="image/ico" href="/favicon.png">
     <!-- CSS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -111,7 +111,7 @@
                         <div class="sub-title-1 animate__animated animate__fadeInUp animate__delay-1s">Category</div>
                         <h2 class="title-section animate__animated animate__fadeInUp animate__delay-2s">Spatial Design</h2>
                         <div class="s-line animate__animated animate__zoomIn animate__delay-3s"></div>
-                        <p class="animate__animated animate__fadeInUp animate__delay-3s">In dictum quam eget metus hendrerit, accumsan finibus orci egestas. Nam non turpis sit amet ligula aliquam tincidunt.</p>
+                        <p class="animate__animated animate__fadeInUp animate__delay-3s"></p>
                     </div>
                 </div>
                 <div class="swiper-slide i-2 category-text">
@@ -119,7 +119,7 @@
                         <div class="sub-title-1 animate__animated animate__fadeInUp animate__delay-1s">Category</div>
                         <h2 class="title-section animate__animated animate__fadeInUp animate__delay-2s">Multimedia</h2>
                         <div class="s-line animate__animated animate__zoomIn animate__delay-3s"></div>
-                        <p class="animate__animated animate__fadeInUp animate__delay-3s">In dictum quam eget metus hendrerit, accumsan finibus orci egestas. Nam non turpis sit amet ligula aliquam tincidunt.</p>
+                        <p class="animate__animated animate__fadeInUp animate__delay-3s"></p>
                     </div>
                 </div>
                 <div class="swiper-slide i-3 category-text">
@@ -127,7 +127,7 @@
                         <div class="sub-title-1 animate__animated animate__fadeInUp animate__delay-1s">Category</div>
                         <h2 class="title-section animate__animated animate__fadeInUp animate__delay-2s">Development</h2>
                         <div class="s-line animate__animated animate__zoomIn animate__delay-3s"></div>
-                        <p class="animate__animated animate__fadeInUp animate__delay-3s">In dictum quam eget metus hendrerit, accumsan finibus orci egestas. Nam non turpis sit amet ligula aliquam tincidunt.</p>
+                        <p class="animate__animated animate__fadeInUp animate__delay-3s"></p>
                     </div>
                 </div>
                 <div class="swiper-slide i-2">
