--- a/contact.html
+++ b/contact.html
@@ -140,45 +140,39 @@
             <div class="row">
                 <div class="col-md-12 wrap-title-section">
                     <!-- <div class="sub-title-1 animation-1" data-splitting>Contacts</div> -->
-                    <h2 class="title-section animation-1" data-splitting>Please make your<br>inquiries below</h2>
+                    <h2 class="title-section animation-1" data-splitting>Please make your<br>inquiries below - Accepting commissions</h2>
                     <div class="s-line animation-line"></div>
                 </div>
             </div>
             <!-- Section Content -->
             <div class="row">
-           <!--      <div class="col-md-12 contact-info">
+                <div class="col-md-12 contact-info">
                     <ul>
                         <li>
-                            <p><span>Address:</span>Street, City, Country</p>
-                        </li>
-                        <li>
-                            <p><span>Phone:</span>(123) 456 789</p>
-                        </li>
-                        <li>
-                            <p><span>E-mail:</span>your-email@mail.com </p>
+                            <p><span>E-mail:</span>bruenblackarts@gmail.com </p>
                         </li>
                     </ul>
-                </div> -->
-                <div class="col-md-6 offset-md-3">
+                </div>
+               <!--  <div class="col-md-6 offset-md-3">
                     <div class="wrap-form">
                         <form id="contactForm" data-toggle="validator" class="shake text-center">
-                            <div class="form-group">
+                            <div class="form-group"> -->
                                 <!-- ENTER MANE -->
-                                <input type="text" class="form-control" id="name" placeholder="Enter name" required="" data-error="Please enter your name">
+                                <!-- <input type="text" class="form-control" id="name" placeholder="Enter name" required="" data-error="Please enter your name">
                                 <div class="help-block with-errors"></div>
                             </div>
-                            <div class="form-group">
+                            <div class="form-group"> -->
                                 <!-- ENTER EMAIL -->
-                                <input type="email" class="form-control" id="email" placeholder="Enter email" required="" data-error="Please enter your email address">
+                                <!-- <input type="email" class="form-control" id="email" placeholder="Enter email" required="" data-error="Please enter your email address">
                                 <div class="help-block with-errors"></div>
                             </div>
-                            <div class="form-group">
+                            <div class="form-group"> -->
                                 <!-- ENTER MESSAGE -->
-                                <textarea id="message" class="form-control" rows="5" placeholder="Enter your message" required="" data-error="Please enter your message"></textarea>
+                               <!--  <textarea id="message" class="form-control" rows="5" placeholder="Enter your message" required="" data-error="Please enter your message"></textarea>
                                 <div class="help-block with-errors"></div>
-                            </div>
+                            </div> -->
                             <!-- button form submit -->
-                            <div class="submit">
+              <!--               <div class="submit">
                                 <div class="content-button text-center">
                                     <button id="form-submit" class="button-link button node-hover">
                                         <span class="wrap-button-link submit-button">
@@ -193,7 +187,7 @@
                             </div>
                         </form>
                     </div>
-                </div>
+                </div> -->
             </div><!-- /.row -->
         </div>
     </section>
