--- a/contact.html
+++ b/contact.html
@@ -140,7 +140,7 @@
             <div class="row">
                 <div class="col-md-12 wrap-title-section">
                     <!-- <div class="sub-title-1 animation-1" data-splitting>Contacts</div> -->
-                    <h2 class="title-section animation-1" data-splitting>Please make your<br>inquiries below - Accepting commissions</h2>
+                    <h2 class="title-section animation-1" data-splitting>Please make your<br>inquiries below</h2>
                     <div class="s-line animation-line"></div>
                 </div>
             </div>
